--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@ body {
     font-size: 0.7em;
     margin: 0;
 }
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
 @media only screen and (max-width: 600px){
     .main-nav{
         font-size: 0.5em;
