--- a/style.css
+++ b/style.css
@@ -85,6 +85,15 @@ a{
     margin: 20px;
 }
 
+.box:hover {
+    -webkit-transform: rotate(-4deg);
+    -moz-transform: rotate(-4deg);
+    -o-transform: rotate(-4deg);
+    transform: rotate(-4deg);
+}
+
+
+
 /*FOOTER*/
 footer {
     text-align: center;    
